--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -7,14 +7,21 @@
     border-bottom: 1px solid #E7EAEC !important;
 }
 
-.tops {
+.logo-horus {
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    color: #F8F8F8;
+}
+
+.tops{
     .profiles {
         .profile-element {
 			img {
 				width: 32px;
 				margin-right: 10px;
 			}
-            a.asd {
+            a.asd{
                 padding: 10px 15px 0px !important;
                 display: inline-block;
                 color: #999C9E;
@@ -36,17 +43,21 @@
     transition: all 0.5s ease;
 }
 
+.wrapper-content {
+	padding: 20px 10px 40px;
+}
+
 #wrapper.toggled {
-    padding-left: 250px;
+    padding-left: 220px;
 }
 
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    left: 250px;
+    left: 220px;
     width: 0;
     height: 100%;
-    margin-left: -250px;
+    margin-left: -220px;
     overflow-y: auto;
     background: #000;
     -webkit-transition: all 0.5s ease;
@@ -56,7 +67,7 @@
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 220px;
 }
 
 #page-content-wrapper {
@@ -66,7 +77,7 @@
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
-    margin-right: -250px;
+    margin-right: -220px;
 }
 
 /* Sidebar Styles */
@@ -74,7 +85,7 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 220px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -116,9 +127,23 @@
     background: none;
 }
 
+.footer{
+	&.fixed{
+		position: fixed;
+		bottom: 0px;
+		left: 0px;
+		right: 0px;
+		z-index: 1000;
+		padding: 10px 20px;
+		background: #FFF none repeat scroll 0% 0%;
+		border-top: 1px solid #E7EAEC;
+		margin-left: 220px;
+	}
+}
+
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 250px;
+        padding-left: 220px;
     }
 
     #wrapper.toggled {
@@ -126,7 +151,7 @@
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 220px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
