LESS files are now organized and commented. Also, some adjusts were done on the overall layout of the theme

--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>{% block title %} Zertico - Base theme {% endblock %}</title>
   <link rel="stylesheet" href="stylesheets/global.css">
+
   {% block head %}{% endblock %}
 </head>
 <body>
@@ -19,5 +20,8 @@
   </div>
   <script src="javascripts/shared.js"></script>
   {% block javascript %}{% endblock %}
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-hover-dropdown/2.0.10/bootstrap-hover-dropdown.min.js"></script>
 </body>
 </html>
