--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -1,12 +1,12 @@
-/*********************************************************************************************
-
-Project: Base theme
-Version: 1.0
-
-**********************************************************************************************/
+//
+// HORUS BASE THEME
+// v0.01
+// --------------------------------------------------
 
 //@import "base/_mixins.less";
 //@import "base/_reset.less";
 @import "base/_bootstrap.less";
+@import "base/_variables.less";
+@import "base/_mixins.less";
 @import "base/_general.less";
 
