--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -1,132 +1,120 @@
-/************
-	GENERAL
-************/
+//
+// General CSS
+// --------------------------------------------------
 
-//general
+// == Helpers
+//
+//##
 .border-bottom {
-    border-bottom: 1px solid #E7EAEC !important;
+    border-bottom:				1px solid #E7EAEC !important;
 }
 
-.logo-horus {
-    font-size: 30px;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    color: #F8F8F8;
+// == Main Sections
+//
+//##
+
+// Main wrapper
+#wrapper {
+    padding-left: 0;
+    .transitions-all;
+	&.toggled {
+	    padding-left: @sidebar-width;
+	    #sidebar-wrapper {
+		    width: @sidebar-width;
+		}
+		#page-content-wrapper {
+		    position: absolute;
+		    margin-right: -@sidebar-width;
+		}
+	}
 }
 
-.tops{
+// Main content wrapper
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    .wrapper-content {
+		padding: 20px 10px 40px;
+	}
+}
+
+// Sidebar
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: @sidebar-width;
+    width: 0;
+    height: 100%;
+    margin-left: -@sidebar-width;
+    overflow-y: auto;
+    background: darken(@light-gray, 5%); //lighten(@dark-gray, 20%);
+    border-right: 1px solid #E7EAEC;
+    .transitions-all;
+
+    #side-menu {
+	    position: absolute;
+	    top: 0;
+	    width: @sidebar-width;
+	    margin: 0;
+	    padding: 0;
+	    list-style: none;
+	    .nav-header {
+		    font-size: 30px;
+		    text-transform: uppercase;
+		    letter-spacing: 8px;
+		    color: @nav-links-gray;
+		    padding: 20px;
+		}
+		li {
+		    text-indent: 20px;
+		    &.active{
+		    	border-left: 4px solid darken(@dark-gray, 30%);
+		    	background: @dark-gray
+		    }
+		    a {
+			    //display: block;
+			    text-decoration: none;
+			    color: @text-color;
+			    font-weight: 600;
+			    padding: 14px 20px 14px 25px;
+			    &:hover {
+				    text-decoration: none;
+				    color: darken(@nav-links-gray, 50%);
+				    background: @dark-gray;
+				}
+				&:focus{
+				    text-decoration: none;
+				}
+			}
+		}
+	}
+}
+
+// Navbar
+.navbar{
+	background: @light-gray;
+	padding: 0px 10px;
+	border-radius: 0px;
+	.navbar-top-links li {
+	    display: inline-block;
+	}
     .profiles {
+    	margin-right: 0px !important;
         .profile-element {
 			img {
 				width: 32px;
 				margin-right: 10px;
 			}
-            a.asd{
-                padding: 10px 15px 0px !important;
+            a{
+                padding: 10px 0px 0px 15px !important;
                 display: inline-block;
-                color: #999C9E;
+                color: @nav-links-gray;
             }
         }
     }
 }
 
-//navbar
-.navbar{
-	background: #F3F3F4;
-}
-
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.wrapper-content {
-	padding: 20px 10px 40px;
-}
-
-#wrapper.toggled {
-    padding-left: 220px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 220px;
-    width: 0;
-    height: 100%;
-    margin-left: -220px;
-    overflow-y: auto;
-    background: #000;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 220px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -220px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 220px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-	text-align: center;
-	padding: 20px 25px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
+// Footer
 .footer{
 	&.fixed{
 		position: fixed;
@@ -137,33 +125,34 @@
 		padding: 10px 20px;
 		background: #FFF none repeat scroll 0% 0%;
 		border-top: 1px solid #E7EAEC;
-		margin-left: 220px;
+		margin-left: @sidebar-width;
 	}
 }
 
+// == Media Queries
+//
+//##
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 220px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
+        padding-left: @sidebar-width;
+        &.toggled {
+        	padding-left: 0;
+	        #sidebar-wrapper {
+		        width: 0;
+		    }
+		    #page-content-wrapper {
+		        position: relative;
+		        margin-right: 0;
+		    }
+	    }
     }
 
     #sidebar-wrapper {
-        width: 220px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
+        width: @sidebar-width;
     }
 
     #page-content-wrapper {
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
+        padding: 0px 15px;
+		position: relative;
     }
 }
