--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -5,8 +5,6 @@ Version: 1.0
 
 **********************************************************************************************/
 
-//@import "base/_mixins.less";
-//@import "base/_reset.less";
-@import "base/_bootstrap.less";
+@import "bootstrap";
 @import "base/_general.less";
 
