Font awesome added to the base theme

--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -6,5 +6,6 @@
 @import "base/_variables.less";
 @import "base/_mixins.less";
 @import "bootstrap";
+@import "font-awesome";
 @import "base/_general.less";
 
