--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -3,6 +3,20 @@
 ************/
 
 //general
+
+//wrapper
+
+.stretched #wrapper {
+  box-shadow: none;
+  margin: 0;
+  width: 100%;
+}
+
+#page_content .wrap_content, #page_content .content-wrap, #page_content .wrap_content {
+    padding: 80px 0;
+    position: relative;
+}
+
 .border-bottom {
     border-bottom: 1px solid #E7EAEC !important;
 }
@@ -167,3 +181,4 @@
         margin-right: 0;
     }
 }
+
