--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -7,6 +7,14 @@ Version: 1.0
 
 //@import "base/_mixins.less";
 //@import "base/_reset.less";
+@import "base/_base.less";
+@import "base/_general.less";
 @import "base/_bootstrap.less";
 @import "base/_general.less";
+@import "base/theme/_page-menu.less";
+@import "base/theme/_box-category.less";
+@import "base/theme/_page-title.less";
+@import "base/theme/_breadcrumb.less";
+@import "base/theme/_footer.less";
+@import "base/theme/_promo-box.less";
 
