--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -6,9 +6,9 @@
 @import "base/_variables.less";
 @import "base/_base.less";
 @import "base/_general.less";
-//@import "base/_mixins.less";
-//@import "bootstrap.less";
-//@import "font-awesome";
+@import "base/_mixins.less";
+@import "bootstrap";
+@import "font-awesome";
 @import "base/theme/_page-menu.less";
 @import "base/theme/_box-category.less";
 @import "base/theme/_page-title.less";
