--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -7,13 +7,6 @@
 //
 //##
 
-// Page Content Wrapper  
-
-#page_content .wrap_content {
-    padding: 80px 0;
-    position: relative;
-}
-
 // Borders
 
 .border-bottom {
@@ -30,7 +23,7 @@
     margin: 0;
     box-shadow: none;
     width: 100%;
-    //.transitions-all;
+    .transitions-all;
 	&.toggled {
 	    padding-left: @sidebar-width;
 	    #sidebar-wrapper {
@@ -52,6 +45,13 @@
 	}
 }
 
+// Page Content Wrapper  
+
+#page_content .wrap_content {
+    padding: 80px 0;
+    position: relative;
+}
+
 // Sidebar
 #sidebar-wrapper {
     z-index: 1000;
@@ -62,8 +62,8 @@
     margin-left: -@sidebar-width;
     overflow-y: auto;
     background: darken(@light-gray, 5%); //lighten(@dark-gray, 20%);
-    //border-right: 1px solid #E7EAEC;
-    //.transitions-all;
+    border-right: 1px solid #E7EAEC;
+    .transitions-all;
 
     #side-menu {
 	    position: absolute;
