--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -2,13 +2,45 @@
 // General CSS
 // --------------------------------------------------
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+body{
+	font-family: 'Open Sans', sans-serif;
+}
+
+hr{
+	border-top: 1px solid @border-color;
+}
+
 // == Helpers
 //
 //##
-.border-bottom {
-    border-bottom:				1px solid #E7EAEC !important;
+.border-bottom{
+    border-bottom: 1px solid @border-color;
 }
 
+.border-left{
+	border-left: 1px solid @border-color;
+}
+
+.form-group{
+	margin-bottom: 20px;
+}
+
+.control-label{
+	font-weight: 400;
+}
+
+.remove-padding{
+	padding: 0px !important;
+}
+
+.fix-padding-mini-dashs{
+	padding: 0px 10px 100px !important;
+}
+
+small{
+	color: @light-text-color;
+}
 // == Main Sections
 //
 //##
@@ -17,6 +49,37 @@
 #wrapper {
     padding-left: 0;
     .transitions-all;
+    .backs-nav{
+    	color: @light-text-color;
+    	padding: 0px;
+		border-bottom: 1px solid #E7EAEC;
+    }
+    .backs{
+    	color: @light-text-color;
+    	padding: 15px 10px;
+    	border-bottom: 1px solid @border-color;
+    	.go-back{
+    		i{
+	    		color: @light-text-color;
+	    		font-size: 26px;
+	    	}
+	    	span{
+	    		color: @light-text-color;
+				font-size: 14px;
+				vertical-align: 3px;
+				margin-left: 10px;
+				//font-weight: 300;
+	    	}
+    	}
+    	.title{
+    		text-align: center;
+    		span{
+    			font-size: 16px;
+    			color: @light-text-color;
+    			vertical-align: -5px;
+    		}
+    	}
+    }
 	&.toggled {
 	    padding-left: @sidebar-width;
 	    #sidebar-wrapper {
@@ -29,12 +92,90 @@
 	}
 }
 
+.comp-nav{
+	overflow: hidden;
+	text-align: center;
+	.comp-nav-item{
+		display: inline-block;
+		text-align: center;
+		padding: 0px 40px;
+		a{
+			position: relative;
+			display: inline-block;
+			padding: 14px 2px 12px;
+			border-bottom: 1px solid white;
+			&:hover{
+				text-decoration: none;
+				border-bottom: 1px solid darken(@border-color, 10%);
+				margin-bottom: -1px;
+			}
+			i{
+				color: @text-color;
+				font-size: 24px;
+			}
+			span{
+				font-size: 15px;
+				font-weight: 300;
+				vertical-align: 3px;
+				margin-left: 10px;
+				color: @text-color;
+			}
+		}
+	}
+}
+
 // Main content wrapper
 #page-content-wrapper {
     width: 100%;
     position: absolute;
     .wrapper-content {
-		padding: 20px 10px 40px;
+		padding: 20px 10px 100px;
+		.comp-s-item{
+			padding: 30px 10px 40px;
+		}
+		.companies{
+			.companies-item{
+				padding: 10px 30px;
+				border-bottom: 1px solid #E7E7EC;
+				i{
+					margin-right: 10px;
+					color: lighten(@text-color, 10%)
+				}
+				span{
+					color: @text-color;
+				}
+				&:hover{
+					background-color: @gray-bg;
+					background-image: linear-gradient(to right, #FFF 0px, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #FFF 100%);
+				}
+				&:last-child{
+					border-bottom: none;
+					&:hover{
+						background-color: @gray-bg;
+						background-image: linear-gradient(to right, #FFF 0px, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #FFF 100%), linear-gradient(to top, #FFF, rgba(255, 255, 255, 0));
+					}
+				}
+				&:first-child{
+					&:hover{
+						background-color: @gray-bg;
+					    background-image: linear-gradient(to right, #FFF 0px, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #FFF 100%), linear-gradient(to bottom, #FFF, rgba(255, 255, 255, 0));
+					}
+				}
+			}
+		}
+		.summary{
+			padding: 15px 30px 25px;
+			.summary-group{
+				margin: 10px 0px;
+				font-weight: 300;
+				.summary-label{
+					color: lighten(@text-color, 40%);
+				}
+				span{
+					display: inline-block;
+				}
+			}
+		}
 	}
 }
 
@@ -47,8 +188,8 @@
     height: 100%;
     margin-left: -@sidebar-width;
     overflow-y: auto;
-    background: darken(@light-gray, 5%); //lighten(@dark-gray, 20%);
-    border-right: 1px solid #E7EAEC;
+    background: @gray-bg;
+    border-right: 1px solid @border-color;
     .transitions-all;
 
     #side-menu {
@@ -67,20 +208,27 @@
 		}
 		li {
 		    text-indent: 20px;
+		    border-bottom: 1px solid darken(@gray-bg, 5%);
 		    &.active{
-		    	border-left: 4px solid darken(@dark-gray, 30%);
-		    	background: @dark-gray
+		    	border-left: 4px solid darken(@dark-gray, 20%);
+		    	background: darken(@gray-bg, 5%);
+		    	i{
+		    		margin-left: -3px;
+		    	}
 		    }
 		    a {
 			    //display: block;
 			    text-decoration: none;
-			    color: @text-color;
+			    color: lighten(@text-color, 10%);
 			    font-weight: 600;
-			    padding: 14px 20px 14px 25px;
+			    padding: 14px 20px 14px 0px;
+			    span{
+			    	margin-left: 10px;
+			    }
 			    &:hover {
 				    text-decoration: none;
 				    color: darken(@nav-links-gray, 50%);
-				    background: @dark-gray;
+				    background: darken(@gray-bg, 5%);
 				}
 				&:focus{
 				    text-decoration: none;
@@ -91,12 +239,22 @@
 }
 
 // Navbar
+.show-menu{
+	margin: 8px 15px 0px;
+}
 .navbar{
-	background: @light-gray;
-	padding: 0px 10px;
+	background: @gray-bg;
+	padding: 0px 0px 0px 10px;
 	border-radius: 0px;
-	.navbar-top-links li {
-	    display: inline-block;
+	color: lighten(@text-color, 10%);
+	.navbar-top-links{
+    	li{
+    		 display: inline-block;
+    		a{
+    			padding: 14px 15px;
+    			color: lighten(@text-color, 10%);
+    		}
+    	}
 	}
     .profiles {
     	margin-right: 0px !important;
@@ -106,7 +264,7 @@
 				margin-right: 10px;
 			}
             a{
-                padding: 10px 0px 0px 15px !important;
+                padding: 10px 10px 6px 10px !important;
                 display: inline-block;
                 color: @nav-links-gray;
             }
@@ -124,7 +282,7 @@
 		z-index: 1000;
 		padding: 10px 20px;
 		background: #FFF none repeat scroll 0% 0%;
-		border-top: 1px solid #E7EAEC;
+		border-top: 1px solid @border-color;
 		margin-left: @sidebar-width;
 	}
 }
