--- a/src/stylesheets/base/_mixins.less
+++ b/src/stylesheets/base/_mixins.less
@@ -2,7 +2,6 @@
 // Mixins
 // --------------------------------------------------
 
-
 // == Transitions
 //
 //##
@@ -13,4 +12,9 @@
     -moz-transition: 			all 0.5s ease;
     -o-transition: 				all 0.5s ease;
     transition: 				all 0.5s ease;
+}
+
+.clearfix {
+  overflow: auto;
+  zoom: 1;
 }
