--- a/src/stylesheets/base/_variables.less
+++ b/src/stylesheets/base/_variables.less
@@ -17,8 +17,9 @@
 @red: 						#ED5565;    // Danger color
 
 // Various colors
-@text-color: 				#676a6c;   	// Body text
-@gray: 						#f3f3f4;    // Background wrapper color
+@light-text-color: 			#76757F;
+@text-color: 				#3F3F44;   	// Body text
+@gray-bg: 					#F8F8F8;    // Background wrapper color
 @light-gray: 				#F3F3F4;   	// Default label, badget
 @label-badget-color: 		#5E5E5E;
 @light-blue:				#f3f6fb;
