--- a/src/stylesheets/base/theme/_box-category.less
+++ b/src/stylesheets/base/theme/_box-category.less
@@ -6,14 +6,18 @@
     border: 1px solid #e5e5e5;
 }
 
-.box_category .fbox-desc, .box_desc,  {
-    background-color: #fff;
+.box_desc,  {
     border-color: -moz-use-text-color #e5e5e5 #e5e5e5;
-    border-image: none;
     border-radius: 0 0 5px 5px;
     border-style: none solid solid;
     border-width: 0 1px 1px;
     padding: 25px;
+}
+
+.box_desc h3 {
+    font-size: 16px;
+    margin-bottom: 15px;
+    margin-top: 30px;
 }
 
 .box_icon i {
