adding first pag of shop

--- a/src/stylesheets/base/_variables.less
+++ b/src/stylesheets/base/_variables.less
@@ -20,6 +20,7 @@
 @light-text-color: 			#76757F;
 @text-color: 				#3F3F44;   	// Body text
 @gray-bg: 					#F8F8F8;    // Background wrapper color
+@dark-bg: 					#353535;    // Page Menu color
 @light-gray: 				#F3F3F4;   	// Default label, badget
 @label-badget-color: 		#5E5E5E;
 @light-blue:				#f3f6fb;
