--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -184,10 +184,11 @@ small{
 }
 
 // Page Content Wrapper  
-
-#page_content .wrap_content {
-    padding: 80px 0;
-    position: relative;
+#page_content {
+	position: relative;
+	.wrap_content {
+	    padding: 80px 0;
+	}
 }
 
 // Sidebar
@@ -459,8 +460,8 @@ small{
 
 //PADDING BOTTOM
 
-.pb_0{
-  padding-bottom: @n;
+.pb_n, .pb_0 {
+  padding-bottom: @n !important;
 }
 
 .pb_10{
