--- a/src/stylesheets/base/theme/_page-title.less
+++ b/src/stylesheets/base/theme/_page-title.less
@@ -1,6 +1,9 @@
 .page_title {
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #eee;
+    background-color: @dark-gray;
+    border-bottom: 1px solid @border-color;
     padding: 50px 0;
     position: relative;
+    .container {
+    	position: relative;
+    }
 }
