--- a/src/stylesheets/base/theme/_box-category.less
+++ b/src/stylesheets/base/theme/_box-category.less
@@ -26,3 +26,35 @@
     font-size: 130px;
     margin: 40px;
 }
+
+.box_group {
+    font-size: 14px;
+    margin-top: 15px;
+    text-align: center;
+    h3::after {
+        border-top: 2px solid @border-color;
+        content: "";
+        display: block;
+        margin: 20px auto;
+        transition: width 0.3s ease 0s;
+        width: 30px;
+    }
+}
+
+.box_icon_group {
+    height: 96px;
+    margin: 0 auto 30px;
+    position: relative;
+    width: 96px;
+    a {
+        color: @inverse;
+        display: block;
+        i {
+        font-size: 42px;
+        line-height: 96px;
+        background-color: @dark-gray;
+        border-radius: 50%;
+        width: 100%;
+        }
+    }
+}
