--- a/src/stylesheets/base/dash/_variables.less
+++ b/src/stylesheets/base/dash/_variables.less
@@ -19,11 +19,16 @@
 // Various colors
 @light-text-color: 			#76757F;
 @text-color: 				#3F3F44;   	// Body text
+@text-color-inverse: 		#CCCCCC;   	// Body text
 @gray-bg: 					#F8F8F8;    // Background wrapper color
+@dark-gray-bg: 				#555555;
 @light-gray: 				#F3F3F4;   	// Default label, badget
 @label-badget-color: 		#5E5E5E;
 @light-blue:				#f3f6fb;
 @inverse:                   white;
+
+@footer-bg:					#333;
+@footer-bg-dark:			darken(@footer-bg, 10%);
 
 // Spiner color and margin
 @spin-color: 				@navy;
