--- a/src/stylesheets/global.less
+++ b/src/stylesheets/global.less
@@ -3,15 +3,19 @@
 // v0.01
 // --------------------------------------------------
 
+//admin
+@import "base/dash/_variables.less";
+@import "base/dash/_mixins.less";
 @import "bootstrap";
 @import "font-awesome";
-@import "base/_variables.less";
-@import "base/_general.less";
-@import "base/_mixins.less";
-@import "base/theme/_page-menu.less";
-@import "base/theme/_box-category.less";
-@import "base/theme/_page-title.less";
-@import "base/theme/_breadcrumb.less";
-@import "base/theme/_footer.less";
-@import "base/theme/_promo-box.less";
+@import "base/dash/_general.less";
+
+//shop
+@import "base/shop/_general.less";
+@import "base/shop/_page-menu.less";
+@import "base/shop/_box-category.less";
+@import "base/shop/_page-title.less";
+@import "base/shop/_breadcrumb.less";
+@import "base/shop/_footer.less";
+@import "base/shop/_promo-box.less";
 
