Improvements were done on shops page

--- a/src/stylesheets/base/shop/_promo-box.less
+++ b/src/stylesheets/base/shop/_promo-box.less
@@ -2,6 +2,9 @@
     padding: 40px 0;
     color: @inverse;
     background-color: @dark-gray-bg;
+    h3{
+        margin: 3px 0px;
+    }
     .container {
     	position: relative;
     }
@@ -24,6 +27,7 @@
 	    text-decoration: none;
 	    color: @inverse;
 	    cursor: pointer;
+        background-color: darken(@dark-gray-bg, 10%);
     }
     &:focus {
 	    text-decoration: none;
