--- a/src/stylesheets/base/shop/_box-category.less
+++ b/src/stylesheets/base/shop/_box-category.less
@@ -11,17 +11,18 @@
     border-radius: 0 0 5px 5px;
     border-width: 0 1px 1px;
     padding: 25px;
+    h3 {
+        font-size: 16px;
+        margin-bottom: 10px;
+        font-weight: 600;
+    }
+    span {
+        font-size: 14px;
+        margin-top: 8px;
+        display: block;
+        margin-bottom: 20px;
+    }
 }
-
-.box_desc h3 {
-    font-size: 16px;
-}
-
-.box_desc > h3 > span {
-   margin-top: 8px;
-   display: block;
-}
-
 .box_icon i {
     font-size: 130px;
     margin: 40px;
