adding Base theme

--- a/src/stylesheets/base/_general.less
+++ b/src/stylesheets/base/_general.less
@@ -333,12 +333,15 @@ small{
     margin: 0 0 15px;
 }
 
-@n: 0;
-@x: 10px;
-@s: 20px;
-@m: 40px;
-@l: 60px;
+//TITLES
 
+.title_border_bottom {
+    margin-bottom: 30px;
+    position: relative;
+    h3 {
+    	border-bottom: 2px solid @border-color;
+    }
+}
 
 //NO MARGIN
 
@@ -350,7 +353,7 @@ small{
 
 //MARGIN TOP
 
-.mt_0{
+.mt_0 {
   margin-top: @n;
 }
 
