--- a/src/stylesheets/base/_variables.less
+++ b/src/stylesheets/base/_variables.less
@@ -20,7 +20,6 @@
 @light-text-color: 			#76757F;
 @text-color: 				#3F3F44;   	// Body text
 @gray-bg: 					#F8F8F8;    // Background wrapper color
-@dark-bg: 					#353535;    // Page Menu color
 @light-gray: 				#F3F3F4;   	// Default label, badget
 @label-badget-color: 		#5E5E5E;
 @light-blue:				#f3f6fb;
@@ -48,6 +47,21 @@
 
 //Navbar links color
 @nav-links-gray: 			#838687;
+
+//Fonts
+@font-xs: 10px;
+@font-sm: 14px;
+@font-md: 20px;
+@font-lg: 28px;
+@font-xl: 40px;
+@font-xxl: 60px;
+
+//Sizes
+@n: 0;
+@x: 10px;
+@s: 20px;
+@m: 40px;
+@l: 60px;
 
 //== Scaffolding
 //
