--- a/src/stylesheets/base/theme/_page-title.less
+++ b/src/stylesheets/base/theme/_page-title.less
@@ -1,5 +1,5 @@
 .page_title {
-    background-color: @dark-gray;
+    background-color: @light-gray;
     border-bottom: 1px solid @border-color;
     padding: 50px 0;
     position: relative;
