--- a/src/stylesheets/base/theme/_promo-box.less
+++ b/src/stylesheets/base/theme/_promo-box.less
@@ -1,7 +1,7 @@
 .promo_box {
     padding: 40px 0;
     color: @inverse;
-    background-color: @dark-bg;
+    background-color: @dark-gray;
     .container {
     	position: relative;
     }
@@ -11,9 +11,9 @@
 	top: 50%;
     right: 30px;
     position: absolute;
-    background-color: darken(@dark-bg, 20%);
+    background-color: darken(@dark-gray, 20%);
     border-radius: 3px;
-    font-size: 18px;
+    font-size: @font-md;
     height: 52px;
     line-height: 52px;
     padding: 0 32px;
@@ -30,8 +30,4 @@
 	    color: @inverse;
 	    cursor: pointer;
     }
-}
-
-.promo_button:hover, .promo_button:focus, {
-
 }
