--- a/src/stylesheets/base/theme/_box-category.less
+++ b/src/stylesheets/base/theme/_box-category.less
@@ -2,8 +2,12 @@
     text-align: center;
 }
 
-.box_icon, .box_plan, .box_icon_plan {
+.box_icon, .box_icon_plan {
     border: 1px solid @border-color;
+}
+
+.box_plan {
+    padding: 12px 12px 12px 0 !important;
 }
 
 .box_desc {
@@ -14,7 +18,7 @@
 }
 
 .box_desc h3 {
-    font-size: 16px;
+    font-size: @font-md;
 }
 
 .box_desc > h3 > span {
@@ -27,8 +31,13 @@
     margin: 40px;
 }
 
+.box_icon_plan i {
+    font-size: @font-xxl;
+    margin: 20px;
+}
+
 .box_group {
-    font-size: 14px;
+    font-size: @font-sm;
     margin-top: 15px;
     text-align: center;
     h3::after {
@@ -38,6 +47,9 @@
         margin: 20px auto;
         transition: width 0.3s ease 0s;
         width: 30px;
+    }
+    &:hover h3::after {
+        width: 90px;
     }
 }
 
@@ -50,7 +62,7 @@
         color: @inverse;
         display: block;
         i {
-        font-size: 42px;
+        font-size: @font-xl;
         line-height: 96px;
         background-color: @dark-gray;
         border-radius: 50%;
