--- a/src/stylesheets/base/theme/_breadcrumb.less
+++ b/src/stylesheets/base/theme/_breadcrumb.less
@@ -1,6 +1,6 @@
 .page_title ol.breadcrumb {
     background-color: transparent;
-    font-size: 15px;
+    font-size: @font-sm;
     left: auto;
     margin: -10px 0 0;
     padding: 0;
