--- a/src/stylesheets/base/theme/_page-menu.less
+++ b/src/stylesheets/base/theme/_page-menu.less
@@ -1,5 +1,5 @@
 #page-menu {
-    background-color: @dark-bg;
+    background-color: @dark-gray;
     height: 44px;
     line-height: 44px;
 }
@@ -26,7 +26,7 @@
     padding: 0 17px;
     &:hover {
         text-decoration: none;
-        background-color: darken(@dark-bg, 20%);
+        background-color: darken(@dark-gray, 20%);
     }
 }
 
