--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -15,7 +15,6 @@ abbr[data-original-title], abbr[title] {
 }
 #shop{
 	#page-menu{
-		padding: 4px;
 		.menu_page_title{
 			padding: 6px 0px;
 			font-size: 16px;
@@ -46,6 +45,7 @@ abbr[data-original-title], abbr[title] {
 		}
 		.main-nav{
 			padding: 35px 0px;
+			margin-bottom: 8px;
 			li{
 				a{
 					text-transform: uppercase;
