--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -286,13 +286,25 @@ small{
 
 // Footer
 .footer{
+	font-size: 12px;
+	.copys{
+		padding: 8px 0px 0px;
+	}
+	.mini-menu{
+		span{
+			vertical-align: -3px;
+		}
+	}
+	.btn-feeds{
+		font-size: 12px;
+	}
 	&.fixed{
 		position: fixed;
 		bottom: 0px;
 		left: 0px;
 		right: 0px;
 		z-index: 1000;
-		padding: 10px 20px;
+		padding: 8px 20px;
 		background: #FFF none repeat scroll 0% 0%;
 		border-top: 1px solid @border-color;
 		margin-left: @sidebar-width;
