--- a/src/stylesheets/base/shop/_promo-box.less
+++ b/src/stylesheets/base/shop/_promo-box.less
@@ -6,17 +6,17 @@
         margin: 3px 0px;
     }
     .container {
-    	position: relative;
+        position: relative;
     }
 }
 
 .promo_button {
-	top: 50%;
     right: 30px;
+    top:0;
     position: absolute;
     background-color: darken(@dark-gray-bg, 20%);
     border-radius: 3px;
-    font-size: 18px;
+    font-size: @font-md;
     height: 52px;
     line-height: 52px;
     padding: 0 32px;
@@ -24,18 +24,14 @@
     text-transform: uppercase;
     color: @inverse;
     &:hover {
-	    text-decoration: none;
-	    color: @inverse;
-	    cursor: pointer;
+        text-decoration: none;
+        color: @inverse;
+        cursor: pointer;
         background-color: darken(@dark-gray-bg, 10%);
     }
     &:focus {
-	    text-decoration: none;
-	    color: @inverse;
-	    cursor: pointer;
+        text-decoration: none;
+        color: @inverse;
+        cursor: pointer;
     }
-}
-
-.promo_button:hover, .promo_button:focus, {
-
 }
