--- a/src/stylesheets/base/dash/_variables.less
+++ b/src/stylesheets/base/dash/_variables.less
@@ -53,6 +53,21 @@
 //Navbar links color
 @nav-links-gray: 			#838687;
 
+//Fonts
+@font-xs: 10px;
+@font-sm: 14px;
+@font-md: 20px;
+@font-lg: 28px;
+@font-xl: 40px;
+@font-xxl: 60px;
+
+//Sizes
+@n: 0;
+@x: 10px;
+@s: 20px;
+@m: 40px;
+@l: 60px;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
