--- a/src/stylesheets/base/shop/_breadcrumb.less
+++ b/src/stylesheets/base/shop/_breadcrumb.less
@@ -1,6 +1,6 @@
 .page_title ol.breadcrumb {
     background-color: transparent;
-    font-size: 15px;
+    font-size: @font-sm;
     left: auto;
     margin: -10px 0 0;
     padding: 0;
@@ -9,6 +9,6 @@
     top: 50%;
     width: auto;
     a{
-    	color: lighten(@text-color-inverse, 50%);
+        color: lighten(@text-color-inverse, 50%);
     }
 }
