Class' name changed

--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -137,8 +137,8 @@ small{
 		.comp-s-item{
 			padding: 30px 10px 40px;
 		}
-		.companies{
-			.companies-item{
+		.s-element{
+			.s-element-item{
 				padding: 10px 30px;
 				border-bottom: 1px solid #E7E7EC;
 				i{
