Company's name changed on all files

--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -7,6 +7,19 @@ body{
 	font-family: 'Open Sans', sans-serif;
 }
 
+.btn{
+	font-size: 12px;
+}
+
+.btn-default{
+    background: transparent linear-gradient(to bottom, #FFF 0%, #F7F7F7 100%) repeat scroll 0% 0%;	
+    border: 1px solid #E7EAEC;
+    color: #676A6C;
+    &:hover{
+    	border: 1px solid #D2D2D2;
+    }
+}
+
 // == Helpers
 //
 //##
