--- a/src/stylesheets/base/dash/_variables.less
+++ b/src/stylesheets/base/dash/_variables.less
@@ -100,7 +100,7 @@
 //
 //## Specify custom locations of the include Glyphicons icon font.
 
-@icon-font-path:            "/assets/zertico/flat/glyphicons/";
+@icon-font-path:            "/assets/Foo Inc/flat/glyphicons/";
 @icon-font-name:            "flat-ui-pro-icons-regular";
 @icon-font-svg-id:          "flat-ui-pro-icons-regular";
 
