--- a/src/html/layouts/shop.html
+++ b/src/html/layouts/shop.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %} Zertico - Base theme {% endblock %}</title>
+    <title>{% block title %} Foo Inc - Base theme {% endblock %}</title>
     <link rel="stylesheet" href="stylesheets/global.css"> {% block head %}{% endblock %}
 </head>
 
