--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -200,7 +200,7 @@ small{
 #page_content {
 	position: relative;
 	.wrap_content {
-	    padding: 80px 0;
+	    padding: 40px 0;
 	}
 }
 
@@ -364,7 +364,8 @@ small{
     margin-bottom: 30px;
     position: relative;
     h3 {
-    	border-bottom: 2px solid @border-color;
+    	padding: 0px 0px 15px;
+    	border-bottom: 1px solid @border-color;
     }
 }
 
