--- a/src/stylesheets/base/shop/_box-category.less
+++ b/src/stylesheets/base/shop/_box-category.less
@@ -19,6 +19,7 @@
     border-radius: 0 0 5px 5px;
     border-width: 0 1px 1px;
     padding: 25px;
+    min-height: 330px;
     h3 {
         font-size: 16px;
         margin-bottom: 10px;
