Plans page is now created

--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -182,9 +182,14 @@ small{
 		}
 		.summary{
 			padding: 15px 30px 25px;
+				h5{
+					float: left;
+				}
 			.summary-group{
-				margin: 10px 0px;
+				width: 100%;
+				margin: 5px 0px;
 				font-weight: 300;
+				float: left;
 				.summary-label{
 					color: lighten(@text-color, 40%);
 				}
