--- a/src/stylesheets/base/shop/_menu-steps.less
+++ b/src/stylesheets/base/shop/_menu-steps.less
@@ -28,8 +28,8 @@
     margin: 0 auto;
     border-radius: 50%;
     background-color: transparent;
-    border: 1px solid @dark-gray;
-    color: @dark-gray;
+    border: 1px solid darken(@dark-gray, 30%);
+    color: darken(@dark-gray, 30%);
     line-height: 50px;
     height: 52px;
     width: 52px;
@@ -41,8 +41,7 @@
     text-decoration: none;
 }
 .menu_steps li.active a, .menu_steps li:hover a  {
-    background-color: @dark-gray;
-    border-color: @dark-gray;
+    background-color: darken(@dark-gray, 30%);
+    border-color: darken(@dark-gray, 30%);
     color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
