Adding Page for Shopping Cart

--- a/src/stylesheets/base/dash/_variables.less
+++ b/src/stylesheets/base/dash/_variables.less
@@ -25,7 +25,7 @@
 @light-gray: 				#F3F3F4;   	// Default label, badget
 @label-badget-color: 		#5E5E5E;
 @light-blue:				#f3f6fb;
-@inverse:                   white;
+@inverse:                   #FFFFFF;
 
 @footer-bg:					#333;
 @footer-bg-dark:			darken(@footer-bg, 10%);
