--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -65,3 +65,44 @@ abbr[data-original-title], abbr[title] {
 	}
 }
 
+
+
+//FORMS
+.form-control {
+    border: 2px solid darken(@border-color, 15%);
+    height: 42px;
+    line-height: 1.467;
+    padding: 8px 12px;
+}
+
+//BUTTONS
+
+.btn_3D {
+    font-size: 14px;
+    font-weight: 600;
+    height: 40px;
+    letter-spacing: 1px;
+    line-height: 40px;
+    margin: 5px;
+    padding: 0 22px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+}
+
+.well {
+    background-color: @light-gray;
+    border: 1px solid @border-color;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 20px;
+    min-height: 20px;
+    padding: 19px;
+    overflow: auto;
+    .well-lg {
+	    border-radius: 6px;
+	    padding: 24px;
+	}
+}
+
+
+
