--- a/src/stylesheets/base/shop/_menu-steps.less
+++ b/src/stylesheets/base/shop/_menu-steps.less
@@ -1,48 +1,48 @@
 .menu_steps {
     list-style: outside none none;
     margin: 0 0 40px;
-}
-.menu_steps li {
-    width: 20%;
-    float: left;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-}
-.menu_steps li::after, .menu_steps li::before {
-    border-top: 1px dashed @light-gray;
-    content: "";
-    left: 0;
-    margin-left: -26px;
-    position: absolute;
-    top: 30px;
-    width: 50%;
-}
-.menu_steps li::after {
-    left: auto;
-    margin: 0 -26px 0 0;
-    right: 0;
-}
-.menu_steps li a.step_icon {
-	transition: all 0.3s ease 0s;
-    margin: 0 auto;
-    border-radius: 50%;
-    background-color: transparent;
-    border: 1px solid @dark-gray;
-    color: @dark-gray;
-    line-height: 50px;
-    height: 52px;
-    width: 52px;
-    cursor: pointer;
-    display: block;
-    float: none;
-    position: relative;
-    font-size: 28px;
-    text-decoration: none;
-}
-.menu_steps li.active a, .menu_steps li:hover a  {
-    background-color: @dark-gray;
-    border-color: @dark-gray;
-    color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    padding: 0;
+    li {
+        width: 20%;
+        float: left;
+        overflow: hidden;
+        position: relative;
+        text-align: center;
+        &::after, &::before {
+            border-top: 1px dashed @dark-gray;
+            content: "";
+            left: 0;
+            margin-left: -26px;
+            position: absolute;
+            top: 30px;
+            width: 50%;
+        }
+        &.active a, &:hover a  {
+            background-color: @text-color;
+            border-color: @text-color;
+            color: #FFFFFF;
+            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+        }
+        &::after {
+            left: auto;
+            margin: 0 -26px 0 0;
+            right: 0;
+        }
+        &:first-child::before, &:last-child::after {
+            display: none;
+        }
+        a.step_icon {
+            transition: all 0.3s ease 0s;
+            border-radius: 50%;
+            background-color: transparent;
+            border: 1px solid @text-color;
+            color: @text-color;
+            line-height: 50px;
+            height: 52px;
+            width: 52px;
+            cursor: pointer;
+            font-size: 28px;
+            text-decoration: none;
+        }
+    }
 }
