Shopping cart page is now styled

--- a/src/stylesheets/base/shop/_breadcrumb.less
+++ b/src/stylesheets/base/shop/_breadcrumb.less
@@ -2,7 +2,7 @@
     ol{
         &.breadcrumb {
             background-color: transparent;
-            font-size: @font-sm;
+            font-size: 12px;
             left: auto;
             margin: -10px 0 0;
             padding: 0;
@@ -11,7 +11,7 @@
             top: 50%;
             width: auto;
             a{
-                color: darken(@text-color-inverse, 15%);
+                color: darken(@text-color-inverse, 30%);
                 font-weight: 400;
             }
             font-weight: 600;
