--- a/src/html/layouts/documentation.html
+++ b/src/html/layouts/documentation.html
@@ -5,13 +5,13 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %} Foo Inc - Base theme {% endblock %}</title>
-  <link rel="stylesheet" href="stylesheets/global.css">
+  <link rel="stylesheet" href="stylesheets/theme.css">
 
   {% block head %}{% endblock %}
 </head>
 <body>
   {% block content %}{% endblock %}
-  <script src="javascripts/shared.js"></script>
+  <script src="javascripts/theme.js"></script>
   {% block javascript %}{% endblock %}
 </body>
 </html>
