--- a/src/html/layouts/shop.html
+++ b/src/html/layouts/shop.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %} Foo Inc - Base theme {% endblock %}</title>
-    <link rel="stylesheet" href="stylesheets/global.css"> {% block head %}{% endblock %}
+    <link rel="stylesheet" href="stylesheets/theme.css"> {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         </div>
     </section>
     {% include "parts/footer.html" %}
-    <script src="javascripts/shared.js"></script>
+    <script src="javascripts/theme.js"></script>
     {% block javascript %}{% endblock %}
   </div>
 </body>
