--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -6,8 +6,8 @@
 //admin
 @import "base/dash/_variables.less";
 @import "base/dash/_mixins.less";
-@import "bootstrap";
-@import "font-awesome";
+@import "../../node_modules/bootstrap/less/bootstrap";
+@import "../../node_modules/font-awesome/less/font-awesome";
 @import "base/dash/_general.less";
 
 //shop
