--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -2,7 +2,7 @@
 // General CSS
 // --------------------------------------------------
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 body{
 	font-family: 'Open Sans', sans-serif;
 }
