Creating Shop cart payment view

--- a/src/stylesheets/base/shop/_menu-steps.less
+++ b/src/stylesheets/base/shop/_menu-steps.less
@@ -6,7 +6,7 @@
     text-align: center;
 }
 .menu_steps li::after, .menu_steps li::before {
-    border-top: 1px dashed @light-gray;
+    border-top: 1px dashed lighten(@dark-gray, 10%);
     content: "";
     left: 0;
     margin-left: -26px;
