--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -5,7 +5,8 @@ abbr[data-original-title], abbr[title] {
 .page_title{
 	padding: 25px 0px !important;
 	h2{
-		    margin-top: 5px;
+	    margin-top: 5px;
+	    font-size: 24px;
 	}
 }
 
@@ -18,6 +19,19 @@ abbr[data-original-title], abbr[title] {
     	padding: 25px;
 	    width: 100%;
 	    text-align: center;
+	}
+}
+
+.value_div{
+	table{
+		font-size: 12px;
+		tbody{
+			tr{
+				td{
+					padding: 5px 10px;
+				}
+			}
+		}
 	}
 }
 
