Styling shopping cart login page

--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -209,20 +209,20 @@ abbr[data-original-title], abbr[title] {
 //     text-transform: uppercase;
 // }
 
-// .well {
-//     background-color: @light-gray;
-//     border: 1px solid @border-color;
-//     border-radius: 4px;
-//     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
-//     margin-bottom: 20px;
-//     min-height: 20px;
-//     padding: 19px;
-//     overflow: auto;
-//     .well-lg {
-// 	    border-radius: 6px;
-// 	    padding: 24px;
-// 	}
-// }
+.well {
+    background-color: @light-gray;
+    border: 1px solid @border-color;
+    border-radius: 4px;
+    box-shadow: none;
+    margin-bottom: 20px;
+    min-height: 20px;
+    padding: 19px;
+    overflow: auto;
+    .well-lg {
+	    border-radius: 6px;
+	    padding: 24px;
+	}
+}
 
 
 
