Adding pages for registering clients

--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -65,8 +65,6 @@ abbr[data-original-title], abbr[title] {
 	}
 }
 
-
-
 //FORMS
 .form-control {
     border: 2px solid darken(@border-color, 15%);
@@ -75,19 +73,7 @@ abbr[data-original-title], abbr[title] {
     padding: 8px 12px;
 }
 
-//BUTTONS
-
-.btn_3D {
-    font-size: 14px;
-    font-weight: 600;
-    height: 40px;
-    letter-spacing: 1px;
-    line-height: 40px;
-    margin: 5px;
-    padding: 0 22px;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-    text-transform: uppercase;
-}
+//WELLS
 
 .well {
     background-color: @light-gray;
