--- a/src/stylesheets/base/shop/_table-cart.less
+++ b/src/stylesheets/base/shop/_table-cart.less
@@ -11,11 +11,9 @@
 	    font-size: @font-sm;
 	}
 	input.coupon {
-	    height: 38px;
-	    padding: 8px 14px;
+	    height: 31px;
 	    transition: border-color 0.15s ease-in-out 0s;
 	    width: 100%;
-	    margin: 5px;
 	}
 	.total_value {
 	    font-size: @font-md;
@@ -41,6 +39,7 @@
 			float: left;
 			height: 40px;
 			line-height: 40px;
+			background-color:transparent;
 		}
 	}
 }
