--- a/src/stylesheets/base/shop/_menu-steps.less
+++ b/src/stylesheets/base/shop/_menu-steps.less
@@ -19,6 +19,10 @@
     margin: 0 -26px 0 0;
     right: 0;
 }
+
+.menu_steps::first-child::before, .menu_steps::last-child::after {
+    display: none;
+}
 .menu_steps li a.step_icon {
 	transition: all 0.3s ease 0s;
     margin: 0 auto;
