--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -15,7 +15,7 @@
 //shop
 @import "base/shop/_general.less";
 @import "base/shop/_page-menu.less";
-@import "base/shop/_box-category.less";
+@import "base/shop/_boxes.less";
 @import "base/shop/_page-title.less";
 @import "base/shop/_breadcrumb.less";
 @import "base/shop/_footer.less";
