--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -194,7 +194,6 @@ abbr[data-original-title], abbr[title] {
     }
 }
 
-
 //WELLS
 .well {
     background-color: @light-gray;
@@ -209,4 +208,9 @@ abbr[data-original-title], abbr[title] {
 	    border-radius: 6px;
 	    padding: 24px;
 	}
+}
+
+//CENTER
+.center {
+	text-align: center;
 }
