--- a/src/stylesheets/base/shop/_page-menu.less
+++ b/src/stylesheets/base/shop/_page-menu.less
@@ -1,35 +1,34 @@
 #page-menu {
     height: 44px;
     background-color: @dark-gray-bg;
-}
-
-.menu_page_title {
-    color: #fff;
-    float: left;
-    span {
-        font-size: 20px;
-        font-weight: 600;
+    .menu_page_title {
+        color: #fff;
+        float: left;
+        span {
+            font-size: 20px;
+            font-weight: 600;
+        }
+    }
+    nav {
+        float: right;
+        position: relative;
+        ul {
+            display: inline-flex;
+            list-style: none;
+        }
+        li a {
+            color: #fff;
+            display: block;
+            font-size: 14px;
+            line-height: 44px;
+            padding: 0 17px;
+            &:hover {
+                text-decoration: none;
+                background-color: darken(@dark-gray-bg, 20%);
+            }
+        }
     }
 }
 
-#page-menu nav {
-    float: right;
-    position: relative;
-}
 
-#page-menu nav li a {
-    color: #fff;
-    display: block;
-    font-size: 14px;
-    line-height: 44px;
-    padding: 0 17px;
-    &:hover {
-        text-decoration: none;
-        background-color: darken(@dark-gray-bg, 20%);
-    }
-}
 
-#page-menu nav ul {
-    display: inline-flex;
-    list-style: none;
-}
