Making Some Improvements on all Base Theme

--- a/src/stylesheets/base/shop/_boxes.less
+++ b/src/stylesheets/base/shop/_boxes.less
@@ -15,7 +15,7 @@
     margin: 40px;
 }
 .box_icon_plan i {
-    font-size: @font-xxl;
+    font-size: 60px;
     margin: 20px;
 }
 .box_desc {
@@ -37,7 +37,7 @@
     }
 }
 .box_group {
-    font-size: @font-sm;
+    font-size: 14px;
     margin-top: 15px;
     text-align: center;
     h3::after {
@@ -60,7 +60,7 @@
             color: @inverse;
             display: block;
             i {
-            font-size: @font-xl;
+            font-size: 40px;
             line-height: 96px;
             background-color: @dark-gray;
             border-radius: 50%;
