--- a/src/stylesheets/base/shop/_table-cart.less
+++ b/src/stylesheets/base/shop/_table-cart.less
@@ -8,7 +8,7 @@
 	}
     .remove_cart {
 	    color: @red;
-	    font-size: @font-sm;
+	    font-size: 14px;
 	}
 	input.coupon {
 	    height: 31px;
@@ -16,7 +16,7 @@
 	    width: 100%;
 	}
 	.total_value {
-	    font-size: @font-md;
+	    font-size: 20px;
 	}
 	.quantity_item_cart {
 	    display: inline-block;
