--- a/src/stylesheets/base/shop/_page-menu.less
+++ b/src/stylesheets/base/shop/_page-menu.less
@@ -2,7 +2,7 @@
     height: 44px;
     background-color: @dark-gray-bg;
     .menu_page_title {
-        color: #fff;
+        color: @inverse;
         float: left;
         span {
             font-size: 20px;
@@ -17,7 +17,7 @@
             list-style: none;
         }
         li a {
-            color: #fff;
+            color: @inverse;
             display: block;
             font-size: 14px;
             line-height: 44px;
