--- a/src/stylesheets/base/shop/_promo-box.less
+++ b/src/stylesheets/base/shop/_promo-box.less
@@ -13,7 +13,7 @@
             position: absolute;
             background-color: darken(@dark-gray-bg, 20%);
             border-radius: 3px;
-            font-size: @font-md;
+            font-size: 20px;
             height: 52px;
             line-height: 52px;
             padding: 0 32px;
