--- a/src/stylesheets/base/shop/_menu-steps.less
+++ b/src/stylesheets/base/shop/_menu-steps.less
@@ -5,7 +5,7 @@
     position: relative;
     text-align: center;
     &::after, &::before {
-        border-top: 1px dashed lighten(@dark-gray, 10%);
+        border-top: 1px dashed @text-color;
         content: "";
         left: 0;
         margin-left: -26px;
@@ -26,8 +26,8 @@
         margin: 0 auto;
         border-radius: 50%;
         background-color: transparent;
-        border: 1px solid darken(@dark-gray, 30%);
-        color: darken(@dark-gray, 30%);
+        border: 1px solid @text-color;
+        color: @text-color;
         line-height: 50px;
         height: 52px;
         width: 52px;
@@ -39,8 +39,8 @@
         text-decoration: none;
     }
     &.active a, &:hover a {
-        background-color: darken(@dark-gray, 30%);
-        border-color: darken(@dark-gray, 30%);
-        color: #fff;
+        background-color: @text-color;
+        border-color: @text-color;
+        color: @inverse;
     }
 }
