--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -20,3 +20,5 @@
 @import "base/shop/_promo-box.less";
 @import "base/shop/_menu-steps.less";
 @import "base/shop/_table-cart.less";
+@import "base/shop/_switching.less";
+@import "base/shop/_navbar.less";
