--- a/src/stylesheets/base/shop/_page-menu.less
+++ b/src/stylesheets/base/shop/_page-menu.less
@@ -4,10 +4,17 @@
     .menu_page_title {
         color: @inverse;
         float: left;
+        padding: 6px 0px;
+        font-size: 16px;
         span {
+            margin-left: 5px;
+            font-weight: 600;
             font-size: 20px;
             font-weight: 600;
         }
+    }
+    .mini-nav ul li a {
+        height: none;
     }
     nav {
         float: right;
@@ -15,6 +22,7 @@
         ul {
             display: inline-flex;
             list-style: none;
+            margin: 0px;
         }
         li a {
             color: @inverse;
