--- a/src/stylesheets/base/shop/_page-title.less
+++ b/src/stylesheets/base/shop/_page-title.less
@@ -1,8 +1,12 @@
 .page_title {
+	padding: 25px 0px;
     background-color: @light-gray;
     border-bottom: 1px solid @border-color;
-    padding: 50px 0;
     position: relative;
+	h2{
+	    margin-top: 5px;
+	    font-size: 24px;
+	}
     .container {
     	position: relative;
     }
