Breaking admin in smaller files, and doing changes to general theme

--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -1,8 +1,12 @@
-abbr[data-original-title], abbr[title] {
-    cursor: help;
-    border-bottom: 1px dotted #777;
+// Page Content 
+#page_content {
+    position: relative;
+    .wrap_content {
+        padding: 40px 0;
+    }
 }
 
+//OPERATIONAL SYSTEMS ON CUSTOMIZE PLANS PAGE
 .box_SO {
     cursor: pointer;
     width: 100%;
