--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -3,11 +3,24 @@
 // v0.01
 // --------------------------------------------------
 
-//admin
-@import "base/dash/_variables.less";
-@import "base/dash/_mixins.less";
+
+//others
+@import "base/others/_variables.less";
+@import "base/others/_mixins.less";
+@import "base/others/_helpers.less";
+
+//external modules
 @import "../../node_modules/bootstrap/less/bootstrap";
 @import "../../node_modules/font-awesome/less/font-awesome";
+
+//admin
+@import "base/dash/_footer.less";
+@import "base/dash/_navbar.less";
+@import "base/dash/_comp-nav.less";
+@import "base/dash/_login.less";
+@import "base/dash/_backs-nav.less";
+@import "base/dash/_element-itens.less";
+@import "base/dash/_sidebar.less";
 @import "base/dash/_general.less";
 
 //shop
@@ -22,3 +35,4 @@
 @import "base/shop/_table-cart.less";
 @import "base/shop/_switching.less";
 @import "base/shop/_navbar.less";
+
