Adding some new files, folders, and doing improvements on general styling

--- a/src/html/layouts/admin.html
+++ b/src/html/layouts/admin.html
@@ -14,6 +14,7 @@
         {% include "parts/page-nav.html" %}
       </div>
       <div id="page-content-wrapper" class="gray-bg">
+        {% include "parts/navbar-top.html" %}
         {% block content %}{% endblock %}
       </div>
     </div>
