--- a/src/stylesheets/base/dash/_backs-nav.less
+++ b/src/stylesheets/base/dash/_backs-nav.less
@@ -1,26 +1,25 @@
-.backs-nav{
+.backs-nav {
 	color: @light-text-color;
 	padding: 0px;
-	border-bottom: 1px solid #E7EAEC;
+	border-bottom: 1px solid @border-color;
 }
-.backs{
+.backs {
 	color: @light-text-color;
 	padding: 15px 10px;
 	border-bottom: 1px solid @border-color;
-	.go-back{
-		i{
+	.go-back {
+		i {
     		color: @light-text-color;
     		font-size: 26px;
     	}
-    	span{
+    	span {
     		color: @light-text-color;
 			font-size: 14px;
 			vertical-align: 3px;
 			margin-left: 10px;
-			//font-weight: 300;
     	}
 	}
-	.title{
+	.title {
 		text-align: center;
 		span{
 			font-size: 16px;
