--- a/src/stylesheets/base/dash/_footer.less
+++ b/src/stylesheets/base/dash/_footer.less
@@ -1,24 +1,24 @@
-.footer{
+.footer {
 	font-size: 12px;
-	.copys{
+	.copys {
 		padding: 8px 0px 0px;
 	}
-	.mini-menu{
-		span{
+	.mini-menu {
+		span {
 			vertical-align: -3px;
 		}
 	}
-	.btn-feeds{
+	.btn-feeds {
 		font-size: 12px;
 	}
-	&.fixed{
+	&.fixed {
 		position: fixed;
 		bottom: 0px;
 		left: 0px;
 		right: 0px;
 		z-index: 1000;
 		padding: 8px 20px;
-		background: #FFF none repeat scroll 0% 0%;
+		background: @inverse none repeat scroll 0% 0%;
 		border-top: 1px solid @border-color;
 	}
 }
