--- a/src/stylesheets/base/dash/_sidebar.less
+++ b/src/stylesheets/base/dash/_sidebar.less
@@ -9,7 +9,6 @@
     background: @gray-bg;
     border-right: 1px solid @border-color;
     .transitions-all;
-
     #side-menu {
 	    position: absolute;
 	    top: 0;
@@ -26,18 +25,17 @@
 		}
 		li {
 		    text-indent: 20px;
-		    border-bottom: 1px solid darken(@gray-bg, 5%);
-		    &.active{
-		    	border-left: 4px solid darken(@dark-gray, 20%);
+		    border-bottom: 1px solid @border-color;
+		    &.active {
+		    	border-left: 4px solid darken(@border-color, 20%);
 		    	background: darken(@gray-bg, 5%);
 		    	i{
 		    		margin-left: -3px;
 		    	}
 		    }
 		    a {
-			    //display: block;
 			    text-decoration: none;
-			    color: lighten(@text-color, 10%);
+			    color: @nav-links-gray;
 			    font-weight: 600;
 			    padding: 14px 20px 14px 0px;
 			    span{
@@ -56,7 +54,7 @@
 				}
 			}
 			.nav-second-level .active {
-				border-left: 4px solid @gray-bg;
+				border-left: 4px solid transparent;
 			}
 		}
 	}
