--- a/src/stylesheets/base/others/_helpers.less
+++ b/src/stylesheets/base/others/_helpers.less
@@ -10,10 +10,6 @@
   padding: 0;
 }
 
-.remove-padding{
-  padding: 0px !important;
-}
-
 //MARGIN TOP
 
 .mt_0 {
@@ -126,8 +122,8 @@
 
 //PADDING BOTTOM
 
-.pb_n, .pb_0 {
-  padding-bottom: @n !important;
+.pb_0 {
+  padding-bottom: @n;
 }
 
 .pb_10{
