Changing the html structure, translating everything to english, fixing breadcrumbs, and some modifications to general styling

--- a/src/stylesheets/base/dash/_navbar.less
+++ b/src/stylesheets/base/dash/_navbar.less
@@ -9,6 +9,9 @@
 		color: lighten(@text-color, 10%);
 	}
 	.navbar-top-links {
+		.dropdown-messages {
+			width: 350px;
+		}
 	  	li{
 	  		 display: inline-block;
 	  		a{
