--- a/src/stylesheets/base/shop/_page-menu.less
+++ b/src/stylesheets/base/shop/_page-menu.less
@@ -30,6 +30,7 @@
             font-size: 14px;
             line-height: 44px;
             padding: 0 17px;
+            transition: background .3s ease 0s;
             &:hover {
                 text-decoration: none;
                 background-color: darken(@dark-gray-bg, 20%);
