--- a/src/html/layouts/admin.html
+++ b/src/html/layouts/admin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %} Foo Inc - Base theme {% endblock %}</title>
-  <link rel="stylesheet" href="stylesheets/theme.css">
+  <link rel="stylesheet" href="/stylesheets/theme.css">
   {% block head %}{% endblock %}
 </head>
 <body>
@@ -18,7 +18,7 @@
         {% block content %}{% endblock %}
       </div>
     </div>
-    <script src="javascripts/theme.js"></script>
+    <script src="/javascripts/theme.js"></script>
     {% block javascript %}{% endblock %}
   </div>
 </body>
