--- a/src/stylesheets/base/dash/_backs-nav.less
+++ b/src/stylesheets/base/dash/_backs-nav.less
@@ -2,6 +2,37 @@
 	color: @light-text-color;
 	padding: 0px;
 	border-bottom: 1px solid @border-color;
+	.comp-nav {
+		overflow: hidden;
+		text-align: center;
+		.comp-nav-item {
+			display: inline-block;
+			text-align: center;
+			padding: 0px 40px;
+			a {
+				position: relative;
+				display: inline-block;
+				padding: 14px 2px 12px;
+				border-bottom: 1px solid white;
+				&:hover {
+					text-decoration: none;
+					border-bottom: 1px solid darken(@border-color, 10%);
+					margin-bottom: -1px;
+				}
+				i {
+					color: @text-color;
+					font-size: 24px;
+				}
+				span {
+					font-size: 15px;
+					font-weight: 300;
+					vertical-align: 3px;
+					margin-left: 10px;
+					color: @text-color;
+				}
+			}
+		}
+	}
 }
 .backs {
 	color: @light-text-color;
