--- a/src/stylesheets/base/dash/_general.less
+++ b/src/stylesheets/base/dash/_general.less
@@ -2,7 +2,7 @@
 // General CSS
 // --------------------------------------------------
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+//@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -15,6 +15,16 @@ body {
     box-shadow: none;
     width: 100%;
     .transitions-all;
+	&.toggled {
+	    padding-left: @sidebar-width;
+	    #sidebar-wrapper {
+		    width: @sidebar-width;
+		}
+		#page-content-wrapper {
+		    position: absolute;
+		    margin-right: -@sidebar-width;
+		}
+	}
 }
 
 //PAGE CONTENT WRAPPER
