--- a/src/stylesheets/base/shop/_general.less
+++ b/src/stylesheets/base/shop/_general.less
@@ -49,22 +49,25 @@
 }
 
 //PAYMENT ICONS
-.payment-option {
-    text-align: center;
-    &:hover i {
-        color: @inverse;
-        background-color: @text-color;
-    }
-    .payment-icon {
-        margin: 15px auto;
-        i {
-        width: 35%;
-            padding: 10px;
-            border-radius: 50%;
-            border: 1px solid @text-color;
-            font-size: 30px;
-
-            transition: all 0.3s ease 0s;
+.payment-radio {
+    width: 100%;
+    .payment-option {
+        text-align: center;
+        &:hover i {
+            color: @inverse;
+            background-color: @text-color;
         }
-    }   
+        .payment-icon {
+            margin: 15px auto;
+            i {
+            width: 35%;
+                padding: 10px;
+                border-radius: 50%;
+                border: 1px solid @text-color;
+                font-size: 30px;
+
+                transition: all 0.3s ease 0s;
+            }
+        }   
+    }
 }
