--- a/src/stylesheets/base/shop/_navbar.less
+++ b/src/stylesheets/base/shop/_navbar.less
@@ -20,6 +20,7 @@
 					border: 1px solid transparent;
 					text-decoration: none;
 					border-radius: 4px;
+					transition: border .3s ease 0s;
 					&:hover,
 					&:active {
 						border: 1px solid @text-color;
