--- a/src/stylesheets/base/dash/_sidebar.less
+++ b/src/stylesheets/base/dash/_sidebar.less
@@ -26,6 +26,13 @@
 		li {
 		    text-indent: 20px;
 		    border-bottom: 1px solid @border-color;
+			&.panel {
+				margin-bottom: 0;
+				background-color: transparent;
+				border: 0 none;
+				border-radius: 0;
+				box-shadow: 0;
+			}
 		    &.active {
 		    	border-left: 4px solid darken(@border-color, 20%);
 		    	background: darken(@gray-bg, 5%);
