A few improvements to all theme

--- a/src/stylesheets/base/dash/_sidebar.less
+++ b/src/stylesheets/base/dash/_sidebar.less
@@ -31,7 +31,7 @@
 				background-color: transparent;
 				border: 0 none;
 				border-radius: 0;
-				box-shadow: 0;
+				box-shadow: none;
 			}
 		    &.active {
 		    	border-left: 4px solid darken(@border-color, 20%);
