Deleting unused javascripts, updating documentation, and creating descriptions form new pages on distributor

--- a/src/stylesheets/base/others/_helpers.less
+++ b/src/stylesheets/base/others/_helpers.less
@@ -185,3 +185,13 @@
 .pr_60{
   padding-right: @l;
 }
+
+// TOOLTIPS
+.tips {
+  text-decoration: none;
+  color: @text-color;
+  &:hover, &:focus {
+    text-decoration: none;
+    color: @text-color;
+  }
+}
