--- a/src/stylesheets/theme.less
+++ b/src/stylesheets/theme.less
@@ -13,6 +13,9 @@
 @import "../../node_modules/bootstrap/less/bootstrap";
 @import "../../node_modules/font-awesome/less/font-awesome";
 
+//documentation
+@import "base/others/_docs.less";
+
 //admin
 @import "base/dash/_footer.less";
 @import "base/dash/_navbar.less";
